# cosmicexcuse

./: .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  publish.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini 
.github/workflows/: publish.yml  python-package.yml  tests.yml
cosmicexcuse/: __init__.py  __version__.py  analyzer.py  cli.py  exceptions.py  formatter.py  generator.py  leaderboard.py  markov.py  utils.py
cosmicexcuse/data/: loader.py
cosmicexcuse/data/bn/: ai.json  blame.json  connectors.json  cosmic.json  intensifiers.json  quantum.json  recommendations.json  technical.json
cosmicexcuse/data/en/: ai.json  blame.json  connectors.json  cosmic.json  intensifiers.json  quantum.json  recommendations.json  technical.json
docs/: Makefile  api.md  conf.py  contributing.md  examples.md  index.md  index.rst  quickstart.md
examples/: basic_usage.py
tests/: conftest.py  test_analyzer.py  test_formatter.py  test_generator.py  test_markov.py
