[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmicexcuse"
version = "0.0.2"
authors = [
    { name = "Shamsuddin Ahmed", email = "info@shamspias.com" },
]
description = "Generate quantum-grade excuses for your code failures using fake AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["excuse", "generator", "quantum", "ai", "humor"]

[project.urls]
"Homepage" = "https://github.com/shamspias/cosmicexcuse"
"Bug Tracker" = "https://github.com/shamspias/cosmicexcuse/issues"
"Documentation" = "https://cosmicexcuse.readthedocs.io/"

[project.scripts]
cosmicexcuse = "cosmicexcuse.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "black>=22.1.0",
    "flake8>=7.1.1",
    "mypy>=1.17.1",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["cosmicexcuse"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["cosmicexcuse"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
